{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 27,
  "lineage": "22768d2e-748d-8b58-a9f1-4c4ec5d0cbe7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myapp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:497458935321:route-table/rtb-0dfad65bd74d2d899",
            "default_route_table_id": "rtb-0dfad65bd74d2d899",
            "id": "rtb-0dfad65bd74d2d899",
            "owner_id": "497458935321",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5400be871e2275f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-027609f664663ed17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "myapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:497458935321:security-group/sg-0d88a5ff03daf9941",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d88a5ff03daf9941",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "4.240.39.193/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "497458935321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "vpc_id": "vpc-027609f664663ed17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07aca7a231992279f",
            "arn": "arn:aws:ec2:me-central-1:497458935321:instance/i-03325d4fcdfb049f8",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03325d4fcdfb049f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "serverkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce3073f8acacfb97",
            "private_dns": "ip-10-0-10-156.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.156",
            "public_ip": "40.172.186.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03607a98e7cba494c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03725ba475f860e4d",
            "tags": {
              "Name": "dev-ec2-instance"
            },
            "tags_all": {
              "Name": "dev-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d88a5ff03daf9941"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_security_group.myapp_sg",
            "aws_key_pair.myapp_key",
            "aws_subnet.myapp_subnet",
            "aws_vpc.myapp_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:497458935321:internet-gateway/igw-0e5400be871e2275f",
            "id": "igw-0e5400be871e2275f",
            "owner_id": "497458935321",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-027609f664663ed17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:497458935321:subnet/subnet-03725ba475f860e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03725ba475f860e4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497458935321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-027609f664663ed17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:497458935321:vpc/vpc-027609f664663ed17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b1e09293ff16487",
            "default_route_table_id": "rtb-0dfad65bd74d2d899",
            "default_security_group_id": "sg-0d88a5ff03daf9941",
            "dhcp_options_id": "dopt-0d62cc61ce78583b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027609f664663ed17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfad65bd74d2d899",
            "owner_id": "497458935321",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}